fixed menu scroll on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -274,7 +274,7 @@ img {
 }
 
 .bbar-header {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background: #1F3238;
@@ -287,12 +287,12 @@ img {
 }
 @media only screen and (min-width: 768px) {
   .bbar-header {
-    height: 80px;
+    position: absolute;
     background: transparent;
     box-shadow: none;
   }
 }
-@media only screen and (min-width: 1170px) {
+@media only screen and (min-width: 170px) {
   .bbar-header {
     -webkit-transition: background-color 0.3s;
     -moz-transition: background-color 0.3s;
@@ -309,7 +309,7 @@ img {
   .bbar-header.is-fixed {
     /* when the user scrolls down, we hide the header right above the viewport */
     position: fixed;
-    top: -80px;
+    top: -50px;
     background-color: #1F3238;
     -webkit-transition: -webkit-transform 0.3s;
     -moz-transition: -moz-transform 0.3s;
@@ -1036,61 +1036,5 @@ footer {
     color: #ffffff;
     font-size: 1em;
     text-align: center;
-  }
-}
-
-/****************************
-scroll to top
-****************************/
-.cd-top {
-  display: inline-block;
-  height: 40px;
-  width: 40px;
-  position: fixed;
-  bottom: 80px;
-  right: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
-  /* image replacement properties */
-  overflow: hidden;
-  text-indent: 100%;
-  white-space: nowrap;
-  background: #d64527 url(../img/cd-top-arrow.svg) no-repeat center 50%;
-  visibility: hidden;
-  opacity: 0;
-  -webkit-transition: opacity .3s 0s, visibility 0s .3s;
-  -moz-transition: opacity .3s 0s, visibility 0s .3s;
-  transition: opacity .3s 0s, visibility 0s .3s;
-  z-index: 10;
-}
-.cd-top.cd-is-visible, .cd-top.cd-fade-out, .no-touch .cd-top:hover {
-  -webkit-transition: opacity .3s 0s, visibility 0s 0s;
-  -moz-transition: opacity .3s 0s, visibility 0s 0s;
-  transition: opacity .3s 0s, visibility 0s 0s;
-}
-.cd-top.cd-is-visible {
-  /* the button becomes visible */
-  visibility: visible;
-  opacity: 1;
-}
-.cd-top.cd-fade-out {
-  /* if the user keeps scrolling down, the button is out of focus and becomes less visible */
-  opacity: .5;
-}
-.no-touch .cd-top:hover {
-  background-color: #d64527;
-  opacity: 1;
-}
-@media only screen and (min-width: 768px) {
-  .cd-top {
-    right: 20px;
-    bottom: 80px;
-  }
-}
-@media only screen and (min-width: 1024px) {
-  .cd-top {
-    height: 60px;
-    width: 60px;
-    right: 30px;
-    bottom: 75px;
   }
 }
